<resources>
    <string name="app_name">Real Estate Manager</string>

    <!-- Toolbar -->
    <string name="add">Add</string>
    <string name="search_engine">Search</string>
    <string name="modify">Modify</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_map">Map View</string>
    <string name="navigation_drawer_simulator">Simulator</string>
    <string name="navigation_drawer_menu_open" translatable="false">open</string>
    <string name="navigation_drawer_menu_close" translatable="false">close</string>

    <!-- SignInActivity -->
    <string name="welcome">Welcome</string>
    <string name="log_in">Log In</string>

    <!-- ListFragment -->
    <string name="price">price</string>
    <string name="city">city</string>
    <string name="type">type</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget ipsum et ante viverra interdum vitae eu risus. Aenean dictum aliquam volutpat. Aliquam a dolor quam. Nulla porttitor diam justo, quis tincidunt est porttitor et. Cras eget porta ex. Praesent ac arcu mauris. Morbi fermentum ut nulla at feugiat. Aliquam efficitur eleifend venenatis. Suspendisse congue ullamcorper elit, eget aliquam nisi porttitor quis. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Permissions -->
    <string name="permission_location">Allow Real Estate Manager to access your device\'s location information?</string>
    <string name="cancel">Cancel</string>
    <string name="network_title">A network access is needed!</string>
    <string name="network_to_access_info">The application need a network access to access your device\'s location information</string>
    <string name="allow">Allow</string>

    <!-- DetailFragment -->
    <string name="surface">Surface</string>
    <string name="description">Description</string>
    <string name="attribute">Attribute</string>
    <string name="number_bedroom">Number of Room</string>
    <string name="location">Location</string>

    <string name="surface_2">Surface :</string>
    <string name="description_2">Description :</string>
    <string name="attribute_2">Attribute :</string>
    <string name="number_room_2">Number of Room :</string>
    <string name="location_2">Location :</string>
    <string name="type_2">Type :</string>
    <string name="price_2">Price :</string>


    <string name="additional_information_detail_fragment">Additional Information :</string>
    <string name="address">Address</string>
    <string name="point_of_interest_detail_fragment">Point of Interest</string>
    <string name="type_detail_fragment">Type</string>
    <string name="available_or_sold">Available or Sold</string>
    <string name="available">Available</string>
    <string name="entry_date">Entry Date</string>
    <string name="sold_date">Date of Sale</string>
    <string name="number_room">Number of Rooms :</string>


    <!-- Number -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="moreThanFive">6..x</string>
    <string name="duplex">duplex</string>
    <string name="lofts">loft</string>
    <string name="penthouse">penthouse</string>
    <string name="manor">manor</string>
    <string name="school">School</string>
    <string name="shop">Shop</string>
    <string name="park">Park</string>
    <string name="transportation">Transportation</string>
    <string name="sold">Sold</string>

    <string name="hour_format">%1$d-%2$d-%3$d</string>
    <string name="code">Zip Code</string>
    <string name="add_new_estate">Add a new estate</string>
    <string name="edit_estate">Edit estate</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="would_you_delete_picture">Confirm deleting the photo ?</string>
    <string name="delete">delete</string>
    <string name="save_success">"Save: success "</string>
    <string name="save_failed">Save: failed</string>
    <string name="update_success">Update is a success!</string>
    <string name="update_failed">The update failed!</string>
    <string name="unknown_date">Unknown Date !</string>
    <string name="title_dialog_picture">Fetch Picture</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="dialog_text">Do you want to take a photo from the gallery or take it directly with the camera?</string>
    <string name="save_the_picture">Save</string>
    <string name="description_photo">Description</string>
    <string name="delete_date">Delete date</string>
    <string name="please_caption">Please enter image\' description</string>
    <string name="permission_storage">We need this permissions to access pictures saved in your device and to allow you to take photos with your camera.</string>
    <string name="warning_description_image">Enter image\'s description</string>
    <string name="save">Save</string>
    <string name="please_address">Please enter address</string>
    <string name="please_zip_code">Please enter zip code</string>
    <string name="please_city">Please enter city</string>
    <string name="no_result">No result</string>
    <string name="entry_date_min">Entry date min</string>
    <string name="entry_date_max">Entry date max</string>
    <string name="sold_date_min">Sold date min</string>
    <string name="sold_date_max">Sold date max</string>

</resources>
